Streetfile parser cleanup.